[FIX] Fixed issue with previous Pod release: incorrect software version was released.